fixed safe-area on mobile browser

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,11 @@ html, body {
     padding: var(--main-padding);
     margin: var(--main-margin);
     box-sizing: border-box;
+    padding-top: env(safe-area-inset-top);
+    padding-left: env(safe-area-inset-left);
+    padding-right: env(safe-area-inset-right);
+    padding-bottom: env(safe-area-inset-bottom);
+    background-color: #497D74;
 }
 
 
